--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,17 @@
             <artifactId>mongo-java-driver</artifactId>
             <version>3.12.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
